src/d6s/Resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/$2"
spec:
  rules:
  - http:
      paths:
      - path: /app # Kustomize will rewrite this
        backend:
          serviceName: svc # Kustomize will rewrite this
          servicePort: 80
